Slider styles to avoid flicker

--- a/assets/scss/_base.scss
+++ b/assets/scss/_base.scss
@@ -160,6 +160,7 @@ a:hover {
 
   .popover-content {
     padding: 8px 15px;
+    min-width: 180px;
 
     ul {
       padding: 0;
