--- a/assets/scss/_slider.scss
+++ b/assets/scss/_slider.scss
@@ -12,7 +12,7 @@
   position: relative;
 }
 .slider.slider-horizontal {
-  width: 210px;
+  width: 150px;
   height: 20px;
 }
 .slider.slider-horizontal .slider-track {
@@ -115,4 +115,8 @@
 }
 .slider-handle.triangle {
   background: transparent none;
+}
+input.slider {
+  visibility: hidden;
+  height: 20px;
 }
